Bug: Slight horizontal overflow on mobile device.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 .navbar-brand, .heading {
     font-family: 'Archivo Black', sans-serif;
